--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -6,9 +6,11 @@ $color-text:       #808080;
 $color-background: #ccc;
 $color-dark-background: #808080;
 $color-light-background: #0393db;
-$color-dark-blue: #00374f;
+$color-dark-blue:  #00374f;
 $color-gray:       #b1b1b1;
 $color-red:        #ff0000;
+$color-orange:     #FFB60D;
+$color-green:      #25D625;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
