--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -26,7 +26,8 @@
     }
   }
 
-  .total-encounters {
+  .dashboard-cards {
+    padding: 1.5rem 3rem;
 
     .header {
       font-size: 20px;
@@ -45,23 +46,20 @@
     .last-year {
       position: absolute;
       right: 20px;
-      bottom: 30px;
-      max-width: 75px;
+      bottom: 20px;
+      max-width: 80px;
 
       .percentage {
         display: block;
         text-align: center;
         font-size: 20px;
-        line-height: 27px;
+        line-height: 16px;
         position: relative;
 
-        .icon {
-          margin-top: -13px;
-          left: -8px;
-
-          &.icon-down {
-            background-position: 0 20px;
-          }
+        .arrow {
+          display: inline-block;
+          height: 15px;
+          margin-right: 2px;
         }
       }
 
