--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -95,8 +95,37 @@
 
     svg {
 
+      g {
+
+        line {
+          display: none;
+        }
+
+        path {
+          stroke: $color-light-blue;
+        }
+
+        text {
+          fill: $color-light-grey;
+          font-size: 15px;
+          text-transform: uppercase;
+          line-height: 22px;
+          font-weight: 800;
+        }
+
+        &.grid {
+          overflow: hidden;
+
+          line {
+            display: initial;
+            stroke: $color-svg-grid;
+            opacity: 0.7;
+          }
+        }
+      }
+
       .column rect {
-        width: 7px;
+        width: 10px;
       }
 
       .column.moderate rect {
