--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -11,6 +11,9 @@ $color-gray:       #b1b1b1;
 $color-red:        #ff0000;
 $color-orange:     #FFB60D;
 $color-green:      #25D625;
+$color-light-blue: #E0E7FF;
+$color-light-grey: #B0BAC9;
+$color-svg-grid:   #8097B1;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
