Fixes following QA for issue #1345

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1093,6 +1093,10 @@ div.page-clinical-progress-report {
 
         .progress-photo {
 
+          img {
+            height: 150px;
+          }
+
           .ega {
             background-color: $color-gray;
             color: $color-white;
