--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $color-light-background: #0393db;
 $color-dark-blue:  #00374f;
 $color-gray:       #b1b1b1;
 $color-red:        #ff0000;
+$color-velvet:     #D4145A;
 $color-orange:     #FFB60D;
 $color-green:      #25D625;
 $color-light-blue: #E0E7FF;
