Add translation to the months and sort by name.

--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -55,7 +55,7 @@
               display: block;
               border-radius: 6px;
               color: white;
-              max-width: 70px;
+              width: 70px;
             }
 
             &.neutral {
