Add filters design [skip ci]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -239,8 +239,8 @@ h3.ui.header {
   font-size: 1.52rem;  //24px
   padding-top: 1em;
   padding-bottom: 1em;
-  text-transform: uppercase !important;
-  font-weight: 800 !important;
+  text-transform: uppercase;
+  font-weight: 800;
   font-family: $font;
   border : 0; //2px;
   border-radius : 0; //25px;
