--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -176,7 +176,7 @@
     .last-year {
       position: absolute;
       right: 20px;
-      top: 60px;;
+      top: 60px;
       max-width: 80px;
 
       .percentage {
@@ -214,6 +214,26 @@
         &:before {
           content: ":";
           margin-right: 2px;
+        }
+      }
+    }
+
+    &.stats {
+      padding: 1.5rem 2.5rem;
+
+      .last-year {
+        right: 10px;
+        top: 76px;
+        max-width: 65px;
+        text-align: center;
+
+        .percentage {
+          font-size: 16px;
+        }
+
+        .percentage-label {
+          font-size: 10px;
+          line-height: 10px;
         }
       }
     }
