--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -566,6 +566,10 @@ h3.ui.header {
     margin-bottom: 30px;
     padding: 17px 15px;
   }
+
+  .input-wrapper {
+    border: 2px solid $color-gray-border;
+  }
 }
 
 .ui.input {
@@ -600,7 +604,6 @@ h3.ui.header {
   width: 300px; //263px;
   text-align: right;
   height: 50px;
-  background: #e6e6e6;
   color: $color-text;
 }
 
@@ -614,7 +617,6 @@ h3.ui.header {
   width: 300px; //263px;
   text-align: right;
   height: 50px;
-  background: #e6e6e6;
   color: $color-text;
 }
 
