--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -8,7 +8,8 @@ $color-dark-background: #808080;
 $color-light-background: #0393db;
 $color-dark-blue: #00374f;
 $color-gray:       #b1b1b1;
-$color-red:        #ff0000;
+$color-red:        #f00;
+$color-gray-border: #d9d9d9;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
