Fix table [skip ci]

--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -62,7 +62,8 @@
             line-height: 24px;
             border: 0 none;
             color: black;
-            padding: 12px 4px;
+            padding: 4px 4px 24px;
+            vertical-align: top;
 
             &.phone-number {
               justify-content: center;
