Icons [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1304,6 +1304,17 @@ input::placeholder {
   }
 }
 
+.icon-lactation {
+  .active &:after {
+    background-image: url(#{$img-path}icon-lactation-active.svg);
+  }
+
+  &:after {
+    background-image: url(#{$img-path}icon-lactation.svg);
+    background-size: 92px 92px;
+  }
+}
+
 
 // Lists
 
