--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -8,6 +8,7 @@ $color-dark-background: #808080;
 $color-light-background: #0393db;
 $color-dark-blue: #00374f;
 $color-gray:       #b1b1b1;
+$color-gray-border: #d9d9d9;
 $color-red:        #ff0000;
 
 $font:             Nunito, Arial, sans-serif;
