Benficiaries table fix and update tests.

--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -575,6 +575,10 @@
             text-align: left;
           }
         }
+
+        th {
+          min-width: 55px;
+        }
       }
     }
   }
