Lactation activity page [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -559,6 +559,10 @@ h3.ui.header {
   background-size: 156px 146px;
 }
 
+.icon-item-lactation {
+  background-image: url(#{$img-path}icon-lactation-blue.svg);
+  background-size: 168px 168px;
+}
 
 // Form
 
