--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -271,7 +271,8 @@ div.page-person {
     }
 }
 
-div.page-participant {
+div.page-participant,
+div.page-activity {
 
   .ui.full.segment .content {
 
