--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-dark-blue: #00374f;
 $color-gray:       #b1b1b1;
 $color-gray-border: #d9d9d9;
 $color-red:        #ff0000;
+$color-white:      #fff;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
