--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -6,7 +6,8 @@ $color-text:       #808080;
 $color-background: #ccc;
 $color-dark-background: #808080;
 $color-light-background: #0393db;
-$color-dark-blue: #00374f;
+$color-dark-blue:  #00374f;
+$color-light-gray: #e6e6e6;
 $color-gray:       #b1b1b1;
 $color-red:        #f00;
 $color-gray-border: #d9d9d9;
