Add wrapper to the CSS.

--- a/server/hedley/modules/custom/hedley_admin/css/date_views.css
+++ b/server/hedley/modules/custom/hedley_admin/css/date_views.css
@@ -3,18 +3,18 @@
  * Custom CSS for the Date Views filter.
  */
 
-#edit-field-date-measured-value-min:before {
+.views-exposed-widget #edit-field-date-measured-value-min:before {
   content: "Start Date";
   display: block;
   font-weight: bold;
 }
-#edit-field-date-measured-value-max:before {
+.views-exposed-widget #edit-field-date-measured-value-max:before {
   content: "End Date";
   display: block;
   font-weight: bold;
 }
 
-#edit-field-date-measured-value-min .form-item,
-#edit-field-date-measured-value-max .form-item {
+.views-exposed-widget #edit-field-date-measured-value-min .form-item,
+.views-exposed-widget #edit-field-date-measured-value-max .form-item {
   display: inline-block;
 }
