--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -607,7 +607,7 @@ h3.ui.header {
   color: $color-text;
 
   &.pairing-code {
-    background: $color-light-gray;
+    background: $color-lighter-grey;
   }
 }
 
