--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -276,7 +276,7 @@ div.page-activity {
 
   .ui.full.segment .content {
 
-    .fbf-to-recieve {
+    .fbf-to-receive {
       border-bottom: 2px solid;
       border-top: 2px solid;
       font-size: 1.8rem;
