--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $color-dark-gray:  #848484;
 $color-darker-gray: #6b6b6b;
 $color-red:        #ff0000;
 $color-red-alert:  #d4145a;
+$color-green-alert: #86a156;
 $color-light-blue: #29c2ff;
 $color-white:      #fff;
 
