--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1244,6 +1244,7 @@ div.page-encounter-types {
 
     button.ui.primary.button {
       height: 60px;
+      margin-bottom: 10px;
       margin-left: auto;
       margin-right: auto;
       padding: 0;
