Add colors and update grid [skip ci]

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -29,6 +29,10 @@ svg.z-score {
     fill: #424242;
   }
 
+  .z-score-blue {
+    fill: $color-primary;
+  }
+
   .z-score-white {
     fill: #FFFFFF;
   }
