Fixes after merge.

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -855,7 +855,7 @@ div.page-clinical {
         }
 
         &.red {
-          background: $color-red-alert;
+          background: $color-velvet;
         }
 
         &.blue {
