--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -592,7 +592,7 @@ h3.ui.header {
   }
 
   .input-wrapper {
-    border: 2px solid $color-gray-border;
+    border: 2px solid $color-grey-border;
   }
 }
 
@@ -681,7 +681,7 @@ h3.ui.header {
 
       .icon-participant.add {
         background-color: white;
-        border: 2px dashed $color-gray;
+        border: 2px dashed $color-grey;
         height: 120px;
         width: 120px;
       }
@@ -713,7 +713,7 @@ h3.ui.header {
     }
 
     .separator-line {
-      border-top: 2px solid $color-gray;
+      border-top: 2px solid $color-grey;
       width: 620px;
       margin-top: 70px;
       margin-bottom: 70px;
@@ -724,7 +724,7 @@ h3.ui.header {
   &.search {
 
     .items {
-      color: $color-gray;
+      color: $color-grey;
       margin-bottom: 50px;
 
       .item .content {
@@ -734,7 +734,7 @@ h3.ui.header {
           width: 70%;
 
           .ui.header {
-            color: $color-gray;
+            color: $color-grey;
             font-size: 24px;
             font-weight: bold;
             margin-top: 3px;
@@ -809,7 +809,7 @@ h3.ui.header {
       .select-input {
         background: none;
         font-size: 2rem;
-        border: 2px solid $color-gray;
+        border: 2px solid $color-grey;
         padding: 0 0.5em;
         line-height: 0.5;
         text-align: left;
@@ -1029,7 +1029,7 @@ input::placeholder {
   box-shadow: 0 0 8px rgba(0,0,0,0.2);
 
   &.alerts-dialog {
-    border-top: 7px solid $color-red-alert;
+    border-top: 7px solid $color-velvet;
     width: 700px !important;
     margin-left: -350px !important;
 
@@ -1048,7 +1048,7 @@ input::placeholder {
         }
 
         .section-label {
-          color: $color-dark-gray;
+          color: $color-dark-grey;
           float: left;
           line-height: 48px;
           margin-left: 30px;
@@ -1058,7 +1058,7 @@ input::placeholder {
       }
 
       .section-items {
-        color: $color-gray;
+        color: $color-grey;
         font-size: 20px;
         padding-left: 6rem;
         text-align: left;
@@ -1067,7 +1067,7 @@ input::placeholder {
           margin-bottom: 5px;
 
           .alert-value {
-            color: $color-red-alert;
+            color: $color-velvet;
             margin-left: 10px;
           }
 
@@ -1424,7 +1424,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-obstetrichistory-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-obstetrichistory-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1438,7 +1438,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-medicalhistory-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-medicalhistory-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1452,7 +1452,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-socialhistory-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-socialhistory-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1466,7 +1466,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-vitals-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-vitals-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1480,7 +1480,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-nutritionassessment-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-nutritionassessment-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1494,7 +1494,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-corephysicalexam-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-corephysicalexam-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1508,7 +1508,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-obstetricalexam-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-obstetricalexam-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1522,7 +1522,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-breastexam-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-breastexam-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1536,7 +1536,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-medication-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-medication-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
@@ -1550,7 +1550,7 @@ input::placeholder {
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-resources-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-resources-grey.svg), url(#{$img-path}icon-uncompleted-circle.svg);
   }
 }
 
